# research_project

./: Makefile  README.md  cookiecutter-config-file.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: autoscaling-ci.yml  build.yml  build_and_publish.yml  gpu-ci.yml
docker/: README.md
language_control_diffusion/: __init__.py
research_project/: .env.example  __init__.py  __main__.py
scripts/: setup-autoscaling.bash
tests/test_example/: test_hello.py
{{research_project}}/: __main__.py
